update (vistas previas)

--- a/frontend/public/ayuda.html
+++ b/frontend/public/ayuda.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
@@ -86,7 +86,8 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="ROMIX | Moda y deportes para todos">
   <meta name="twitter:description" content="Catalogo completo de ropa para mujer, hombre y ninos. Compra online con envios rapidos y atencion personalizada.">
-  <meta name="twitter:image" content="https://raw.githubusercontent.com/Leandro18122022/web/main/frontend/public/images/logo-romix.png"></head>
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/Leandro18122022/web/main/frontend/public/images/logo-romix.png">  <link rel="stylesheet" href="assets/css/romix-header.css">
+</head>
 <body>
   <a class="skip-link" href="#main">Saltar al contenido</a>
   <header>
@@ -288,8 +289,8 @@
         <h4>Contacto</h4>
         <ul>
           <li><a href="ayuda.html#contact" style="color:#adb5bd;text-decoration:none;">Dirección y horarios</a></li>
-          <li><a href="https://wa.me/" target="_blank" rel="noopener" style="color:#adb5bd;text-decoration:none;">WhatsApp</a></li>
-          <li><a href="tel:+549000000000" style="color:#adb5bd;text-decoration:none;">Llamar por teléfono</a></li>
+          <li><a href="https://wa.me/5491154272065" target="_blank" rel="noopener" style="color:#adb5bd;text-decoration:none;">WhatsApp</a></li>
+          <li><a href="tel:+5491154272065" style="color:#adb5bd;text-decoration:none;">Llamar por teléfono</a></li>
         </ul>
       </div>
     </div>
@@ -303,8 +304,10 @@
     });
   </script>
   <script src="assets/js/search.js"></script>
+  <script src="assets/js/romix-header.js"></script>
 </body>
 </html>
+
 
 
 
