--- a/frontend/public/hombre.html
+++ b/frontend/public/hombre.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
@@ -262,7 +262,8 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="ROMIX | Moda y deportes para todos">
   <meta name="twitter:description" content="Catalogo completo de ropa para mujer, hombre y ninos. Compra online con envios rapidos y atencion personalizada.">
-  <meta name="twitter:image" content="https://raw.githubusercontent.com/Leandro18122022/web/main/frontend/public/images/logo-romix.png"></head>
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/Leandro18122022/web/main/frontend/public/images/logo-romix.png">  <link rel="stylesheet" href="assets/css/romix-header.css">
+</head>
 <body>
   <a class="skip-link" href="#grid">Saltar al contenido</a>
   <header>
@@ -936,8 +937,10 @@
   <script src="assets/js/inventory.js"></script>
   <script src="assets/js/search.js"></script>
   <div id="romix-toast" class="romix-toast" aria-live="polite" role="status"></div>
+  <script src="assets/js/romix-header.js"></script>
 </body>
 </html>
+
 
 
 
