--- a/frontend/public/ninos.html
+++ b/frontend/public/ninos.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
@@ -262,7 +262,8 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="ROMIX | Moda y deportes para todos">
   <meta name="twitter:description" content="Catalogo completo de ropa para mujer, hombre y ninos. Compra online con envios rapidos y atencion personalizada.">
-  <meta name="twitter:image" content="https://raw.githubusercontent.com/Leandro18122022/web/main/frontend/public/images/logo-romix.png"></head>
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/Leandro18122022/web/main/frontend/public/images/logo-romix.png">  <link rel="stylesheet" href="assets/css/romix-header.css">
+</head>
 <body>
   <a class="skip-link" href="#grid">Saltar al contenido</a>
   <header>
@@ -287,7 +288,7 @@
   </header>
 
   <main class="container" aria-label="Productos para Niños">
-    <h1 style="margin:6px 2px 14px">Coleccion Niños</h1>
+    <h1 style="margin:6px 2px 14px">Colección Niños</h1>
     <div class="layout">
       <aside class="filters-panel" id="filters-panel" role="region" aria-labelledby="filters-panel-title" aria-hidden="false">
         <div class="filters-header">
@@ -350,7 +351,7 @@
         <ul>
           <li><a href="mujer.html" style="color:#adb5bd;text-decoration:none;">Ropa para Mujer</a></li>
           <li><a href="hombre.html" style="color:#adb5bd;text-decoration:none;">Ropa para Hombre</a></li>
-          <li><a href="ninos.html" style="color:#adb5bd;text-decoration:none;">Ropa para Niños</a></li>
+          <li><a href="ninos.html" style="color:#adb5bd;text-decoration:none;">Ropa para Nios</a></li>
           <li><a href="novedades.html" style="color:#adb5bd;text-decoration:none;">Novedades</a></li>
           <li><a href="index.html#ofertas" style="color:#adb5bd;text-decoration:none;">Ofertas</a></li>
         </ul>
@@ -917,8 +918,10 @@
   <script src="assets/js/inventory.js"></script>
   <script src="assets/js/search.js"></script>
   <div id="romix-toast" class="romix-toast" aria-live="polite" role="status"></div>
+  <script src="assets/js/romix-header.js"></script>
 </body>
 </html>
+
 
 
 
