--- a/frontend/public/cart.html
+++ b/frontend/public/cart.html
@@ -81,7 +81,8 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="ROMIX | Moda y deportes para todos">
   <meta name="twitter:description" content="Catalogo completo de ropa para mujer, hombre y ninos. Compra online con envios rapidos y atencion personalizada.">
-  <meta name="twitter:image" content="https://raw.githubusercontent.com/Leandro18122022/web/main/frontend/public/images/logo-romix.png"></head>
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/Leandro18122022/web/main/frontend/public/images/logo-romix.png">  <link rel="stylesheet" href="assets/css/romix-header.css">
+
 <body>
     <header>
     <div class="header-container topbar">
@@ -443,7 +444,10 @@
 
   <script src="assets/js/inventory.js"></script>
   <script src="assets/js/search.js"></script>
-</body>
+  <script src="assets/js/romix-header.js"></script>
+
 </html>
+
+
 
 
