--- a/frontend/public/detalle.html
+++ b/frontend/public/detalle.html
@@ -341,6 +341,7 @@
 
     window.addEventListener('DOMContentLoaded', init);
   </script>
+  <link rel="stylesheet" href="assets/css/romix-header.css">
 </head>
 
 <body>
@@ -381,5 +382,7 @@
   <main class="container">
     <div id="root"></div>
   </main>
+  <script src="assets/js/romix-header.js"></script>
 </body>
 </html>
+
